fix: header fix: font fix: videoCard gap

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -63,7 +63,7 @@
         background-color: $KK;
         display: flex;
         align-items: center;
-        //width: 160px;
+        width: fit-content;
         height: 100%;
         gap: 8px;
         p{
